Update example site pages to show markdown source

--- a/example/pattern/ok_01.md
+++ b/example/pattern/ok_01.md
@@ -14,10 +14,11 @@ git merge feature/1
 git tag v1.0.0
 ```
 
+::: details Source
 
-## Input
+````md
+## Result
 
-````
 ```gitgraph
 [log]
 git commit -m 'initial commit'
@@ -29,3 +30,5 @@ git merge feature/1
 git tag v1.0.0
 ```
 ````
+
+:::
