--- a/example/pattern/ok_02.md
+++ b/example/pattern/ok_02.md
@@ -36,10 +36,11 @@ git switch master
 git merge feature/3
 ```
 
+::: details Source
 
-## Input
+````md
+## Result
 
-````
 ```gitgraph
 [option]
 defaultBranch: master
@@ -73,3 +74,5 @@ git switch master
 git merge feature/3
 ```
 ````
+
+:::
