Example site: Update pages

--- a/example/pattern/ok_01.md
+++ b/example/pattern/ok_01.md
@@ -1,7 +1,4 @@
----
-title: OK 01
----
-## Result
+# OK 01
 
 ```gitgraph
 [log]
@@ -14,10 +11,11 @@ git merge feature/1
 git tag v1.0.0
 ```
 
-::: details Source
+
+## Source
 
 ````md
-## Result
+# OK 01
 
 ```gitgraph
 [log]
@@ -30,5 +28,3 @@ git merge feature/1
 git tag v1.0.0
 ```
 ````
-
-:::
