--- a/example/pattern/ok_02.md
+++ b/example/pattern/ok_02.md
@@ -1,7 +1,4 @@
----
-title: OK 02
----
-## Result
+# OK 02
 
 ```gitgraph
 [option]
@@ -36,10 +33,11 @@ git switch master
 git merge feature/3
 ```
 
-::: details Source
+
+## Source
 
 ````md
-## Result
+# OK 02
 
 ```gitgraph
 [option]
@@ -74,5 +72,3 @@ git switch master
 git merge feature/3
 ```
 ````
-
-:::
